--- a/robot-service/store_init.yaml
+++ b/robot-service/store_init.yaml
@@ -23,7 +23,7 @@ actuators:
     pulse_max: 2.5
     angle_min: 0 
     angle_max: 180
-    angle_start: 0
+    angle_start: 90
     step_resolution: 4096  # 12bit
     angle_max_velocity: 600  # 600° per second
   m12:
@@ -34,7 +34,7 @@ actuators:
     pulse_max: 2.5
     angle_min: 0 
     angle_max: 180
-    angle_start: 0
+    angle_start: 90
     step_resolution: 4096  # 12bit
     angle_max_velocity: 600  # 600° per second
   m21:
@@ -125,72 +125,72 @@ actuators:
     angle_start: 90
     step_resolution: 4096  # 12bit
     angle_max_velocity: 600  # 600° per second  
-  m61:
-    id: 10
-    type: servo
-    speed: 0.1
-    pulse_min: 0.5
-    pulse_max: 2.5
-    angle_min: 0 
-    angle_max: 180
-    angle_start: 90
-    step_resolution: 4096  # 12bit
-    angle_max_velocity: 600  # 600° per second
-  m62:
-    id: 11
-    type: servo
-    speed: 0.1
-    pulse_min: 0.5
-    pulse_max: 2.5
-    angle_min: 0 
-    angle_max: 180
-    angle_start: 90
-    step_resolution: 4096  # 12bit
-    angle_max_velocity: 600  # 600° per second
-  m71:
-    id: 12
-    type: servo
-    speed: 0.1
-    pulse_min: 0.5
-    pulse_max: 2.5
-    angle_min: 0 
-    angle_max: 180
-    angle_start: 90
-    step_resolution: 4096  # 12bit
-    angle_max_velocity: 600  # 600° per second
-  m72:
-    id: 13
-    type: servo
-    speed: 0.1
-    pulse_min: 0.5
-    pulse_max: 2.5
-    angle_min: 0 
-    angle_max: 180
-    angle_start: 90
-    step_resolution: 4096  # 12bit
-    angle_max_velocity: 600  # 600° per second
-  m81:
-    id: 14
-    type: servo
-    speed: 0.1
-    pulse_min: 0.5
-    pulse_max: 2.5
-    angle_min: 0 
-    angle_max: 180
-    angle_start: 90
-    step_resolution: 4096  # 12bit
-    angle_max_velocity: 600  # 600° per second
-  m82:
-    id: 15
-    type: servo
-    speed: 0.1
-    pulse_min: 0.5
-    pulse_max: 2.5
-    angle_min: 0 
-    angle_max: 180
-    angle_start: 90
-    step_resolution: 4096  # 12bit
-    angle_max_velocity: 600  # 600° per second    
+  # m61:
+  #   id: 10
+  #   type: servo
+  #   speed: 0.1
+  #   pulse_min: 0.5
+  #   pulse_max: 2.5
+  #   angle_min: 0 
+  #   angle_max: 180
+  #   angle_start: 90
+  #   step_resolution: 4096  # 12bit
+  #   angle_max_velocity: 600  # 600° per second
+  # m62:
+  #   id: 11
+  #   type: servo
+  #   speed: 0.1
+  #   pulse_min: 0.5
+  #   pulse_max: 2.5
+  #   angle_min: 0 
+  #   angle_max: 180
+  #   angle_start: 90
+  #   step_resolution: 4096  # 12bit
+  #   angle_max_velocity: 600  # 600° per second
+  # m71:
+  #   id: 12
+  #   type: servo
+  #   speed: 0.1
+  #   pulse_min: 0.5
+  #   pulse_max: 2.5
+  #   angle_min: 0 
+  #   angle_max: 180
+  #   angle_start: 90
+  #   step_resolution: 4096  # 12bit
+  #   angle_max_velocity: 600  # 600° per second
+  # m72:
+  #   id: 13
+  #   type: servo
+  #   speed: 0.1
+  #   pulse_min: 0.5
+  #   pulse_max: 2.5
+  #   angle_min: 0 
+  #   angle_max: 180
+  #   angle_start: 90
+  #   step_resolution: 4096  # 12bit
+  #   angle_max_velocity: 600  # 600° per second
+  # m81:
+  #   id: 14
+  #   type: servo
+  #   speed: 0.1
+  #   pulse_min: 0.5
+  #   pulse_max: 2.5
+  #   angle_min: 0 
+  #   angle_max: 180
+  #   angle_start: 90
+  #   step_resolution: 4096  # 12bit
+  #   angle_max_velocity: 600  # 600° per second
+  # m82:
+  #   id: 15
+  #   type: servo
+  #   speed: 0.1
+  #   pulse_min: 0.5
+  #   pulse_max: 2.5
+  #   angle_min: 0 
+  #   angle_max: 180
+  #   angle_start: 90
+  #   step_resolution: 4096  # 12bit
+  #   angle_max_velocity: 600  # 600° per second    
 sensors:
   cpu_temp:
     value: 0
